[gd_scene load_steps=9 format=2]

[ext_resource path="res://files/Archivo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://logic/HUD.gd" type="Script" id=2]
[ext_resource path="res://images/logo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.678431, 0.180392, 0.27451, 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Logo" type="TextureRect" parent="."]
margin_left = 0.131363
margin_top = -208.187
margin_right = 1280.13
margin_bottom = 1071.81
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -42.0
margin_right = 100.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "CES-E"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 700.0
margin_top = -70.0
margin_right = -250.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 2 )
text = "Iniciar test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 250.0
margin_top = -70.0
margin_right = -700.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 2 )
text = "Salir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTest" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 899.603
margin_top = -70.3969
margin_right = -20.3969
margin_bottom = -50.3969
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Finalizar test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cue" type="Label" parent="." groups=[
"Words",
]]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 400.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 5 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Word1" type="Label" parent="." groups=[
"Words",
]]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -100.0
margin_bottom = -180.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Word2" type="Label" parent="." groups=[
"Words",
]]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Word3" type="Label" parent="." groups=[
"Words",
]]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_top = 100.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="EndTest" to="." method="_on_EndTest_pressed"]
